tests/fixtures/invalid/int_2_args.py
# int() takes at most 1 argument, got 2
x = int(1, 1)
